; ModuleID = '/home/carl/AnghaBench/openssl/ssl/statem/extr_extensions.c_tls_parse_certificate_authorities.c'
source_filename = "/home/carl/AnghaBench/openssl/ssl/statem/extr_extensions.c_tls_parse_certificate_authorities.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SSL_AD_DECODE_ERROR = common dso_local global i32 0, align 4
@SSL_F_TLS_PARSE_CERTIFICATE_AUTHORITIES = common dso_local global i32 0, align 4
@SSL_R_BAD_EXTENSION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32, i32*, i64)* @tls_parse_certificate_authorities to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tls_parse_certificate_authorities(i32* %0, i32* %1, i32 %2, i32* %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i64, align 8
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32* %3, i32** %10, align 8
  store i64 %4, i64* %11, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = load i32*, i32** %8, align 8
  %14 = call i32 @parse_ca_names(i32* %12, i32* %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %5
  store i32 0, i32* %6, align 4
  br label %28

17:                                               ; preds = %5
  %18 = load i32*, i32** %8, align 8
  %19 = call i64 @PACKET_remaining(i32* %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %27

21:                                               ; preds = %17
  %22 = load i32*, i32** %7, align 8
  %23 = load i32, i32* @SSL_AD_DECODE_ERROR, align 4
  %24 = load i32, i32* @SSL_F_TLS_PARSE_CERTIFICATE_AUTHORITIES, align 4
  %25 = load i32, i32* @SSL_R_BAD_EXTENSION, align 4
  %26 = call i32 @SSLfatal(i32* %22, i32 %23, i32 %24, i32 %25)
  store i32 0, i32* %6, align 4
  br label %28

27:                                               ; preds = %17
  store i32 1, i32* %6, align 4
  br label %28

28:                                               ; preds = %27, %21, %16
  %29 = load i32, i32* %6, align 4
  ret i32 %29
}

declare dso_local i32 @parse_ca_names(i32*, i32*) #1

declare dso_local i64 @PACKET_remaining(i32*) #1

declare dso_local i32 @SSLfatal(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
